namespaces/live-1.cloud-platform.service.justice.gov.uk/case-notes-to-probation-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: case-notes-to-probation-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "case-notes-to-probation"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/case-notes-poll-push.git"
